--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jquery": "^3.4.0",
     "ng2-charts": "^2.2.2",
     "popper.js": "^1.15.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "sweetalert2": "^8.7.0",
     "tslib": "^1.9.0",
     "unsplash-js": "^5.0.0",
